phalla/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phalla-home-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: www.phallaou.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: phalla-www-service
                port: 
                  number: 80
  tls:
    - hosts:
        - www.phallaou.com
      secretName: phalla-home-tls-secret
